--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
 	<header>
 		<ul class="nav nav-tabs">
 			<li ng-class="{active: activeTab === 'home'}"><a ui-sref="home">Home</a></li>
+			<li ng-class="{active: activeTab === 'papers'}"><a ui-sref="papers">Papers</a></li>
 			<li ng-class="{active: activeTab === 'account'}"><a ui-sref="account">Account</a></li>
 			<li><a href="/login" target="_self">Logout</a></li>
 		</ul>
@@ -36,8 +37,10 @@
     	<script src="app.js"></script>
     	<script src="app-services/user.service.js"></script>
     	<script src="app-services/flash.service.js"></script>
+    	<script src="app-services/biodata.service.js"></script>
   		<script src="home/index.controller.js"></script>
     	<script src="account/index.controller.js"></script>
+    	<script src="papers/index.controller.js"></script>
     </body>
 	</html>
 
