--- a/app/papers/index.html
+++ b/app/papers/index.html
@@ -3,7 +3,11 @@
 	<form method="get">
 		<div class="form-group">
 			<label for="articleId">Article ID</label>
-			<input type="text" id="articleId" class="form-control" ng-model="vm.articleId" required />
+			<input type="text" id="articleId" class="form-control" ng-model="vm.articleId._id" required />
+            <label for="title">Title</label>
+            <input type="text" id="title" class="form-control" ng-model="vm.articleId.title" />
+            <label for="authors">Authors</label>
+            <input type="text" id="authors" class="form-control" ng-model="vm.articleId.authors" />
 		</div>
 		<div class="form-group">
 			<button class="btn btn-primary" ng-click="vm.getPaper()">Get Paper</button>
