--- a/app/papers/index.html
+++ b/app/papers/index.html
@@ -6,7 +6,7 @@
 			<input type="text" id="articleId" class="form-control" ng-model="vm.articleId._id" required />
             <label for="title">Title</label>
             <input type="text" id="title" class="form-control" ng-model="vm.articleId.title" />
-            <label for="authors">Authors</label>
+            <label for="authors">Author(s)</label>
             <input type="text" id="authors" class="form-control" ng-model="vm.articleId.authors" />
 		</div>
 		<div class="form-group">
