--- a/app/account/index.html
+++ b/app/account/index.html
@@ -11,7 +11,7 @@
        	</div>
        	<div class="form-group">
         	<label for="password">Password</label>
-        	<input type="password" id="password" class="form-control" ng-model="vm.user.password" required />
+        	<input type="password" id="password" class="form-control" ng-model="vm.user.password" />
        	</div>
        	<div class="form-group">
         	<label for="lastName">Team</label>
