--- a/app/papers/index.html
+++ b/app/papers/index.html
@@ -3,15 +3,16 @@
 	<form method="get">
 		<div class="form-group">
 			<label for="articleId">Article ID</label>
-			<input type="text" id="articleId" class="form-control" ng-model="vm.articleId._id" />
+			<input type="text" id="articleId" class="form-control" ng-model="vm.article._id" />
             <label for="title">Title</label>
-            <input type="text" id="title" class="form-control" ng-model="vm.articleId.title" />
+            <input type="text" id="title" class="form-control" ng-model="vm.article.title" />
             <label for="authors">Author(s)</label>
-            <input type="text" id="authors" class="form-control" ng-model="vm.articleId.authors" />
+            <input type="text" id="authors" class="form-control" ng-model="vm.article.authors" />
 		</div>
 		<div class="form-group">
 			<button class="btn btn-primary" ng-click="vm.getPaper()">Get Paper</button>
             <button class="btn btn-secondary" ng-click="vm.getPaperByTitle()">Search By Title</button>
+            <button class="btn btn-primary" ng-click-"vm.savePaper()">Save Paper</button>
             <button class="btn btn-danger" ng-click="vm.clear()">Clear</button>
 		</div>
 	</form>
