--- a/app/papers/index.html
+++ b/app/papers/index.html
@@ -2,12 +2,12 @@
 <div class="form-container">
 	<form method="get">
 		<div class="form-group">
-			<label for="articleId">Article ID</label>
-			<input type="text" id="articleId" class="form-control" ng-model="vm.article._id" />
+			<label for="paperID">Paper ID</label>
+			<input type="text" id="paperID" class="form-control" ng-model="vm.paper._id" />
             <label for="title">Title</label>
-            <input type="text" id="title" class="form-control" ng-model="vm.article.title" />
+            <input type="text" id="title" class="form-control" ng-model="vm.paper.title" />
             <label for="authors">Author(s)</label>
-            <input type="text" id="authors" class="form-control" ng-model="vm.article.authors" />
+            <input type="text" id="authors" class="form-control" ng-model="vm.paper.authors" />
 		</div>
 		<div class="form-group">
 			<button class="btn btn-primary" ng-click="vm.getPaper()">Get Paper</button>
