Modifications to papers now record the change in the database

--- a/app/papers/index.html
+++ b/app/papers/index.html
@@ -12,7 +12,7 @@
 		<div class="form-group">
 			<button class="btn btn-primary" ng-click="vm.getPaper()">Get Paper</button>
             <button class="btn btn-secondary" ng-click="vm.getPaperByTitle()">Search By Title</button>
-            <button class="btn btn-primary" ng-click="vm.savePaper()">Save Paper</button>
+            <button class="btn btn-secondary" ng-click="vm.savePaper()">Save Paper</button>
             <button class="btn btn-danger" ng-click="vm.clear()">Clear</button>
 		</div>
 	</form>
