--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,8 @@
 
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" />
     <link href="app-content/app.css" rel="stylesheet" />
-
 </head>
+
 <body class="container">
 	<!-- header -->
 	<header>
@@ -15,7 +15,9 @@
 			<li ng-class="{active: activeTab === 'home'}"><a ui-sref="home">Home</a></li>
 			<li ng-class="{active: activeTab === 'papers'}"><a ui-sref="papers">Papers</a></li>
 			<li ng-class="{active: activeTab === 'account'}"><a ui-sref="account">Account</a></li>
-			<li><a href="/login" target="_self">Logout</a></li>
+			<!-- <li style="float:right"><a href="/login" target="_self"><button class="btn-danger">Logout</button></a></li> -->
+            <!-- <li style="float:right"> -->
+            <a href="/login" target="_self" class="btn btn-danger" style="float:right">Logout</a><!-- </li> -->
 		</ul>
 		<div class="flash-message" ng-if="flash">
 			<div class="{{'alert alert-' + flash.type}}" ng-bind="flash.message"></div>
