--- a/app/papers/index.html
+++ b/app/papers/index.html
@@ -14,6 +14,7 @@
             <button class="btn btn-secondary" ng-click="vm.getPaperByTitle()">Search By Title</button>
             <button class="btn btn-secondary" ng-click="vm.savePaper()">Save Paper</button>
             <button class="btn btn-danger" ng-click="vm.clear()">Clear</button>
+            <button class="btn btn-secondary"><a ui-sref="edit">Edit</a></button>
 		</div>
 	</form>
 </div>
