Paper for editing saves between views

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
 	<title>Big Bio-Data Recapture</title>
 
 	<link href="//bootswatch.com/yeti/bootstrap.min.css" rel="stylesheet" />
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" />
     <link href="app-content/app.css" rel="stylesheet" />
 </head>
 
