Fixed not saving paper for edit after 1 time, added back button

--- a/app/papers/edit.html
+++ b/app/papers/edit.html
@@ -14,6 +14,7 @@
             <br>
 			<button class="btn" ng-click="vm.uploadPDF()">Upload File</button>
             <button class="btn btn-secondary" ng-click="vm.savePaper()">Save Paper</button>
+            <button class="btn btn-danger"><a ui-sref="papers">Back</a></button></td>
 		</div>
 	</form>
 </div>
