--- a/app/papers/edit.html
+++ b/app/papers/edit.html
@@ -16,6 +16,7 @@
             <br>
 			<button class="btn" ng-click="vm.convert64()">Upload File</button>
             <button class="btn btn-secondary" ng-click="vm.savePaper()">Save Paper</button>
+            <button class="btn btn-secondary" ng-click="vm.openPDF()">Open PDF</button>
             <button class="btn btn-danger"><a ui-sref="papers">Back</a></button></td>
 		</div>
 	</form>
