--- a/app/papers/edit.html
+++ b/app/papers/edit.html
@@ -1,23 +1,43 @@
-  <meta http-equiv="Content-Security-Policy" content="img-src 'self' data:;default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *">
-
+<head>
+<style>
+.right-div {
+  float: right;
+  width: 50%;
+}
+.left-div {
+  float: left;
+  width: 50%;
+}
+@media screen and (max-width: 1100px) {
+  .container > div {
+    width: 100%;
+  }
+}
+</style>
+</head>
 <h1>Edit</h1>
-<div class="form-container">
-	<form method="get">
-		<div class="form-group">
-			<label for="paperID">Paper ID</label>
-			<input type="text" id="paperID" class="form-control" ng-model="vm.paper._id" readonly="readonly" />
-            <label for="title">Title</label>
-            <input type="text" id="title" class="form-control" ng-model="vm.paper.title" />
-            <label for="authors">Author(s)</label>
-            <input type="text" id="authors" class="form-control" ng-model="vm.paper.authors" />
-		</div>
-		<div class="form-group">
-			<input type="file" id="file" name="file" />
-            <br>
-			<button class="btn" ng-click="vm.convert64()">Upload File</button>
-            <button class="btn btn-secondary" ng-click="vm.savePaper()">Save Paper</button>
-            <button class="btn btn-secondary" ng-click="vm.openPDF()">Open PDF</button>
-            <button class="btn btn-danger"><a ui-sref="papers">Back</a></button></td>
-		</div>
-	</form>
+<div class="container" style="max-width: 1100px;">
+  	<div class="left-div">
+  		<object data="{{vm.paper.pdf}}" width="100%" height="100%"></object>
+  	</div>
+	<div class="form-container right-div">
+		<form method="get">
+			<div class="form-group">
+				<label for="paperID">Paper ID</label>
+				<input type="text" id="paperID" class="form-control" ng-model="vm.paper._id" readonly="readonly" />
+	            <label for="title">Title</label>
+	            <input type="text" id="title" class="form-control" ng-model="vm.paper.title" />
+	            <label for="authors">Author(s)</label>
+	            <input type="text" id="authors" class="form-control" ng-model="vm.paper.authors" />
+			</div>
+			<div class="form-group">
+				<input type="file" id="file" name="file" />
+	            <br>
+				<button class="btn" ng-click="vm.convert64()">Upload File</button>
+	            <button class="btn btn-secondary" ng-click="vm.savePaper()">Save Paper</button>
+	            <button class="btn btn-secondary" ng-click="vm.openPDF()">Open PDF</button>
+	            <button class="btn btn-danger"><a ui-sref="papers">Back</a></button></td>
+			</div>
+		</form>
+	</div>
 </div>
