--- a/app/papers/edit.html
+++ b/app/papers/edit.html
@@ -1,3 +1,4 @@
+
 <head>
 <style>
 .right-div {
@@ -18,7 +19,12 @@
 <h1>Edit</h1>
 <div class="container" style="max-width: 1100px;">
   	<div class="left-div">
-  		<object data="{{vm.paper.pdf}}" width="100%" height="100%"></object>
+  	<html>
+		<body>
+		    <object data="{{vm.paper.pdf}}" type="application/pdf">
+		        <embed src="{{vm.paper.pdf}}" type="application/pdf" />
+		    </object>
+		</body>
   	</div>
 	<div class="form-container right-div">
 		<form method="get">
