Added default permissions when registering

--- a/app/home/index.html
+++ b/app/home/index.html
@@ -1,1 +1,1 @@
-<h1>Hello {{vm.user.firstName}}, welcome to {{vm.user.team}}</h1>
+<h1>Hello {{vm.user.firstName}}, welcome to Big Bio-Data Recapture's Portal</h1>
