--- a/app/account/index.html
+++ b/app/account/index.html
@@ -14,12 +14,9 @@
         	<input type="password" id="password" class="form-control" ng-model="vm.user.password" />
        	</div>
        	<div class="form-group">
-        	<label for="lastName">Team</label>
-        	<input type="text" id="team" class="form-control" ng-model="vm.user.team" required />
-       	</div>
-       	<div class="form-group">
        		<button class="btn btn-primary" ng-click="vm.saveUser()">Save</button>
        		<button class="btn btn-danger" ng-click="vm.deleteUser()">Delete</button>
+          <button class="btn btn-info" ng-click="vm.getApikey()">Get Api Key</button>
         </div>
     </form>
 </div>
