Made api section containing key

--- a/app/account/index.html
+++ b/app/account/index.html
@@ -16,9 +16,12 @@
        	<div class="form-group">
        		<button class="btn btn-primary" ng-click="vm.saveUser()">Save</button>
        		<button class="btn btn-danger" ng-click="vm.deleteUser()">Delete</button>
-          <button class="btn btn-info" ng-click="vm.getApikey()">Get Api Key</button>
         </div>
     </form>
-</div>
+</div><br>
+
+<h3>RESTful API</h3>
+    <p><b>API Key</b>: {{vm.apikey}}</p>
+    <p><a href="">API documentation coming soon!</a></p>
 
 
